# LLVMkaleidoscope

./: .gitignore
Docker/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  Makefile  main.cpp
src/lexer/: lexer.lex  lexer.lpp  scanner.h
src/parser/: parser.yy
src/tests/: hello_test.cpp
src/utility/: Driver.cpp  Driver.h
